# StaffDeck

./: README.md  README.zh.md
backend/: .env.example  README.md  desktop_launcher.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: branching.py
backend/app/api/: auth.py  channels.py  chat.py  general_skills.py  knowledge.py  knowledge_bases.py  sessions.py  skills.py  tools.py
backend/app/channels/: __init__.py  crypto.py  schema.py  service_autoroute.py  service_identity.py  service_intake.py  service_outbox.py  service_routing.py  service_session.py
backend/app/core/: agent_loop.py  conversation_context.py  reflection_agent.py  response_generator.py  router.py  skill_runtime.py  step_agent.py
backend/app/db/: database.py  (+2 more)
backend/tests/: test_agent_loop_completion.py  test_auth_password_hashing.py  test_channel_api.py  test_channel_autoroute.py  test_channel_bind.py  test_channel_binding_lifecycle.py  test_channel_crypto.py  test_channel_identity.py  test_channel_intake.py  test_channel_outbox.py  test_channel_routing.py  test_channel_scope.py  test_channel_session.py  test_channel_wechat.py  test_channel_wecom.py  test_chat_trace.py  test_conversation_context.py  test_enterprise_session_privacy.py  test_enterprise_session_visibility.py  test_general_skills.py  test_human_handoff_policy.py  test_knowledge_base.py  test_knowledge_citations.py  test_llm_client.py  test_reflection_agent_loop.py  test_session_channel_columns.py  test_skill_distiller_generic.py  test_skill_editing_and_stats.py  test_skill_runtime.py  test_tools_api.py
(+94 files in other folders)
