[project]
name = "skill-agent-loop-backend"
version = "0.1.0"
description = "FastAPI MVP for an enterprise Skill Agent Loop service"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.117.0,<0.118.0",
  "cryptography>=42.0.0",
  "fastapi>=0.111.0",
  "greenlet>=3.0.3",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "beautifulsoup4>=4.12.3",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pypdf>=4.2.0",
  "python-multipart>=0.0.9",
  "python-docx>=1.1.2",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "sqlmodel>=0.0.21",
  "tzdata>=2025.2",
  "uvicorn[standard]>=0.30.0",
  "wecom-aibot-python-sdk>=1.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0"
]
packaging = [
  "pyinstaller>=6.6.0",
  "certifi>=2024.2.2"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["desktop_launcher", "single_port_app"]

[tool.setuptools.packages.find]
include = ["app*", "mock_servers*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
